--- a/index.html
+++ b/index.html
@@ -4,67 +4,138 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>App Bolsa de Valores</title>
-   <!-- Vincular manifest -->
+
+  <!-- Vincular manifest -->
   <link rel="manifest" href="manifest.json" />
   
   <!-- Icono -->
   <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/015/993/318/non_2x/stock-exchange-icon-design-free-vector.jpg" />
+
   <style>
+    /* CSS general */
     body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background: #f4f6f8;
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f4f8;
       color: #333;
+      box-sizing: border-box;
     }
+
     h1 {
       text-align: center;
-      margin-bottom: 30px;
+      margin-top: 30px;
+      font-size: 2.5rem;
+      color: #007bff;
     }
+
+    /* Contenedor principal */
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    /* Tabla */
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-bottom: 30px;
       background: white;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 40px;
+      overflow: hidden;
     }
+
     th, td {
-      padding: 12px;
-      border-bottom: 1px solid #ddd;
+      padding: 12px 20px;
       text-align: center;
     }
+
     th {
       background-color: #007bff;
       color: white;
+      font-size: 1.1rem;
     }
+
+    td {
+      background-color: #f9f9f9;
+      font-size: 1.1rem;
+    }
+
     .positive {
       color: green;
     }
+
     .negative {
       color: red;
     }
+
+    /* Estilo para los gráficos */
     #chart {
-      max-width: 600px;
+      width: 100%;
+      max-width: 800px;
       margin: 0 auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Botón flotante */
+    .float-button {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: #007bff;
+      color: white;
+      padding: 15px 20px;
+      border-radius: 50%;
+      font-size: 20px;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s;
+    }
+
+    .float-button:hover {
+      background-color: #0056b3;
+    }
+
+    /* Media Queries para responsividad */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2rem;
+      }
+      table {
+        font-size: 0.9rem;
+      }
+      #chart {
+        width: 100%;
+        height: 250px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Bolsa de Valores - Precio de Acciones</h1>
+  <div class="container">
+    <h1>Bolsa de Valores - Precios de Acciones</h1>
 
-  <table id="stocks-table">
-    <thead>
-      <tr>
-        <th>Acción</th>
-        <th>Precio (USD)</th>
-        <th>Cambio (%)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Se llenará con JS -->
-    </tbody>
-  </table>
+    <table id="stocks-table">
+      <thead>
+        <tr>
+          <th>Acción</th>
+          <th>Precio (USD)</th>
+          <th>Cambio (%)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- La tabla se llenará con JS -->
+      </tbody>
+    </table>
 
-  <canvas id="chart" width="600" height="300"></canvas>
+    <canvas id="chart" width="600" height="300"></canvas>
+  </div>
+
+  <button class="float-button" onclick="reloadPage()">↻</button>
 
   <script>
     // Datos simulados de acciones
@@ -153,6 +224,11 @@
       // Etiquetas en eje Y (precios mínimo y máximo)
       ctx.fillText(minPrice.toFixed(2), 5, padding + height);
       ctx.fillText(maxPrice.toFixed(2), 5, padding);
+    }
+
+    // Función para recargar la página
+    function reloadPage() {
+      location.reload();
     }
 
     // Inicializar
