--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
       { symbol: "AMZN", price: 3344.94, change: 0.32 },
       { symbol: "MSFT", price: 299.79, change: -0.12 },
       { symbol: "TSLA", price: 709.67, change: 2.1 },
+       { symbol: "NFLX", price: 524.20, change: 3.05 },
+      { symbol: "NVDA", price: 618.75, change: 4.47 },
+      { symbol: "META", price: 364.83, change: -1.12 },
+      { symbol: "SPY", price: 422.15, change: 0.90 },
+      { symbol: "DIS", price: 182.47, change: -0.58 },
+      { symbol: "PYPL", price: 272.11, change: 2.55 },
+      { symbol: "BABA", price: 142.88, change: 1.75 },
+      { symbol: "V", price: 234.17, change: 0.68 },
+      { symbol: "INTC", price: 54.67, change: -1.03 },
+      { symbol: "AMD", price: 111.56, change: 2.89 },
+      { symbol: "WMT", price: 141.52, change: 0.35 },
+      { symbol: "BA", price: 204.92, change: 1.15 },
+      { symbol: "GS", price: 378.14, change: 0.92 },
     ];
 
     // Función para renderizar la tabla
