--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
   <button class="float-button" onclick="reloadPage()">↻</button>
 
   <script>
-    // Datos simulados de acciones
+    // Datos simulados de acciones con más stocks
     const stocks = [
       { symbol: "AAPL", price: 145.32, change: 1.24 },
       { symbol: "GOOGL", price: 2734.26, change: -0.85 },
       { symbol: "AMZN", price: 3344.94, change: 0.32 },
       { symbol: "MSFT", price: 299.79, change: -0.12 },
       { symbol: "TSLA", price: 709.67, change: 2.1 },
-       { symbol: "NFLX", price: 524.20, change: 3.05 },
+      { symbol: "NFLX", price: 524.20, change: 3.05 },
       { symbol: "NVDA", price: 618.75, change: 4.47 },
       { symbol: "META", price: 364.83, change: -1.12 },
       { symbol: "SPY", price: 422.15, change: 0.90 },
